--- a/kanban-board/index.html
+++ b/kanban-board/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <title>Kanban Board</title>
+    <title>AMD Vulsquash</title>
   </head>
   <body>
     <div id="root"></div>
